--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
   },
   "dependencies": {
     "apexcharts": "^3.49.0",
+    "html2canvas": "^1.4.1",
     "next": "14.2.3",
+    "qrcode": "^1.5.3",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
+    "react-qr-code": "^2.0.13",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/styled-components": "^5.1.34",
