--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
     "react-qr-code": "^2.0.13",
-    "styled-components": "^6.1.11"
+    "styled-components": "^6.1.11",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -25,6 +26,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/styled-components": "^5.1.34",
+    "@types/uuid": "^9.0.8",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "typescript": "^5"
