--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "@types/file-saver": "^2.0.7",
     "apexcharts": "^3.49.0",
+    "crypto": "^1.0.1",
     "csv-parser": "^3.0.0",
     "file-saver": "^2.0.5",
+    "firebase": "^10.12.1",
     "html2canvas": "^1.4.1",
     "json2csv": "^6.0.0-alpha.2",
     "next": "14.2.3",
+    "nostr-tools": "2.5.2",
     "papaparse": "^5.4.1",
     "qrcode": "^1.5.3",
     "react": "^18",
