--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@types/file-saver": "^2.0.7",
     "apexcharts": "^3.49.0",
+    "axios": "^1.7.2",
     "crypto": "^1.0.1",
     "csv-parser": "^3.0.0",
+    "dotenv": "^16.4.5",
     "file-saver": "^2.0.5",
     "firebase": "^10.12.1",
+    "fs": "^0.0.1-security",
     "html2canvas": "^1.4.1",
     "json2csv": "^6.0.0-alpha.2",
     "next": "14.2.3",
@@ -25,6 +28,7 @@
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
     "react-qr-code": "^2.0.13",
+    "socket.io-client": "4.5.4",
     "styled-components": "^6.1.11",
     "uuid": "^9.0.1"
   },
