--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "fs": "^0.0.1-security",
     "html2canvas": "^1.4.1",
     "json2csv": "^6.0.0-alpha.2",
-    "next": "14.2.3",
+    "next": "^14.2.28",
     "nostr-tools": "2.5.2",
     "papaparse": "^5.4.1",
     "qrcode": "^1.5.3",
@@ -28,7 +28,7 @@
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
     "react-qr-code": "^2.0.13",
-    "socket.io-client": "4.5.4",
+    "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.11",
     "uuid": "^9.0.1"
   },
