--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "csv-parser": "^3.0.0",
     "dotenv": "^16.4.5",
     "file-saver": "^2.0.5",
-    "firebase": "^10.12.1",
+    "firebase": "^11.8.1",
     "fs": "^0.0.1-security",
     "html2canvas": "^1.4.1",
     "json2csv": "^6.0.0-alpha.2",
     "next": "^14.2.28",
     "nostr-tools": "2.5.2",
     "papaparse": "^5.4.1",
+    "peerjs": "^1.5.4",
     "qrcode": "^1.5.3",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
