--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@types/file-saver": "^2.0.7",
     "apexcharts": "^3.49.0",
     "axios": "^1.7.2",
-    "crypto": "^1.0.1",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.4.5",
     "file-saver": "^2.0.5",
@@ -20,7 +19,8 @@
     "fs": "^0.0.1-security",
     "html2canvas": "^1.4.1",
     "json2csv": "^6.0.0-alpha.2",
-    "next": "^14.2.28",
+    "lru-cache": "^11.1.0",
+    "next": "^15.3.3",
     "nostr-tools": "2.5.2",
     "papaparse": "^5.4.1",
     "peerjs": "^1.5.4",
@@ -42,8 +42,10 @@
     "@types/react-dom": "^18",
     "@types/styled-components": "^5.1.34",
     "@types/uuid": "^9.0.8",
+    "@typescript-eslint/eslint-plugin": "^6.15.0",
+    "@typescript-eslint/parser": "^6.15.0",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3",
+    "eslint-config-next": "^12.1.0",
     "typescript": "^5"
   }
 }
